[package]
name = "fltk-richtext"
version = "0.1.1"
edition = "2021"
description = "A small crate providing rich text formmating for fltk-rs"
repository = "https://github.com/MoAlyousef/fltk-richtext"
license = "MIT"
documentation = "https://docs.rs/fltk-richtext"
readme = "README.md"
keywords = ["cross-platform", "gui"]

[dependencies]
fltk = "1.3.19"

[dev-dependencies]
regex = "1"